--- a/index.html
+++ b/index.html
@@ -1,68 +1,6 @@
-<html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Hallo Guys</title>
-    <link rel="stylesheet" href="rezky.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="rezky.js"></script>
-</head>
-<body>
-    <div class="kelompok">
-    	<div class="navgar">
-    		<h1>MY PROFILE</h1>
-  
-    	</div>
-        <div class="pilihan" align="center">
-        	<span class="yangitu" id="yangitu_2">Tugas</span>
-        	<span class="yangitu aktif" id="yangitu_1">My Profile</span>
-        	<span href="#" class="klik" class="yangitu" id="yangitu_3"></span>
-			<div class="kemanaaja-bawah">
-        	<div class="kemanaaja">
-        </div></div>
-        </div>
-
-        <div class="halu" id="hah_1" style="text-align: center;">
-        	<h2 class="up">Hello, Nice to meet you!</h2>	
-        	<br>
-        	<img src="https://i.postimg.cc/KYM5MhqK/foto.jpg" style="width: 40%">
-            <section style="font-size: 25px;">
-        	<p>Rezky Catur Bunga Naya</p><p>NIM: 43210035</p><p>Prodi: Sistem Informasi</p>
-            <br>
-            <br>
-            <ul >
-            	<p style="text-align: left;">Silahkan Hubungi:</p>
-                <p style="text-align: left;">Instagram: <a href="https://instagram.com/kiddol_">@Kiddol_</a>.</p>
-                <p style="text-align: left;">Email: <a href="mailto:rcbnaya31@gmail.com">rcbnaya31@gmail.com</a>.</p>
-
-            </ul>
-            </section> 
-        	</ul>
-        	<span class="sip"></span>
-        </div>
-
-        <div class="kontak" id="hah_" style="display: none;">
-
-        </div>
-        <div class="hah" id="hah_2" style="display: none;">
-            <br>
-            <h2 class="up" align="center">Tugas</h2>
-            <p style="font-size: 20px;">Chalange Sudah Dikerjakan:</p>
-            <ul>
-                <li><a onclick="alert('Selanjutnya')" href="../p03/tabel.html">P03 HTML Table Sederhana</a></li>
-                <li><a onclick="alert('Selanjutnya')" href="../p03css/tabel-2.html">P03 HTML Table CSS</a></li>
-                <li><a onclick="alert('Selanjutnya')" href="../p03jquery/tabel-3.html">P03 HTML Table JQuery Challenge</a></li>
-                <li><a onclick="alert('Selanjutnya')" href="../pw3formulir/index.html">P03 Formulir Level #1 Basic HTML Form</a></li>
-                <li><a onclick="alert('Selanjutnya')" href="../p04css-basic/indexfrom.html">P04 Formulir Level #2 Basic-CSS HTML Form</a></li>
-                <li><a onclick="alert('Selanjutnya')" href="../p05-jquery-delete/index.html">P05 JQuery FadeOut When Delete</a></li>
-                <li><a onclick="alert('Selanjutnya')" href="../p05-jquery-sliding/index.html">P05 JQuery Sliding</a></li>
-                <li><a onclick="alert('Selanjutnya')" href="../p06-spa-menu/index.html">P06 JQuery Add/Remove Class for SPA Menu</a></li>
-                <br>
-                <br>
-
-            </ul>
-        </div>
-           
-        	
-
-</body>
-</html>
+<script language="javascript">
+<!--
+// == Begin Free HTML Source Code Obfuscation Protection from https://snapbuilder.com == //
+document.write(unescape('%3C%68%74%6D%6C%20%6C%61%6E%67%3D%22%65%6E%22%3E%3C%68%65%61%64%3E%0A%20%20%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%3E%0A%20%20%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2E%30%22%3E%0A%09%3C%74%69%74%6C%65%3E%48%61%6C%6C%6F%20%47%75%79%73%3C%2F%74%69%74%6C%65%3E%0A%20%20%20%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%20%68%72%65%66%3D%22%72%65%7A%6B%79%2E%63%73%73%22%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%61%6A%61%78%2E%67%6F%6F%67%6C%65%61%70%69%73%2E%63%6F%6D%2F%61%6A%61%78%2F%6C%69%62%73%2F%6A%71%75%65%72%79%2F%33%2E%36%2E%30%2F%6A%71%75%65%72%79%2E%6D%69%6E%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%20%20%20%20%3C%73%63%72%69%70%74%20%73%72%63%3D%22%72%65%7A%6B%79%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%62%6F%64%79%3E%0A%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%6B%65%6C%6F%6D%70%6F%6B%22%3E%0A%20%20%20%20%09%3C%64%69%76%20%63%6C%61%73%73%3D%22%6E%61%76%67%61%72%22%3E%0A%20%20%20%20%09%09%3C%68%31%3E%4D%59%20%50%52%4F%46%49%4C%45%3C%2F%68%31%3E%0A%20%20%0A%20%20%20%20%09%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%70%69%6C%69%68%61%6E%22%20%61%6C%69%67%6E%3D%22%63%65%6E%74%65%72%22%3E%0A%20%20%20%20%20%20%20%20%09%3C%73%70%61%6E%20%63%6C%61%73%73%3D%22%79%61%6E%67%69%74%75%22%20%69%64%3D%22%79%61%6E%67%69%74%75%5F%32%22%3E%54%75%67%61%73%3C%2F%73%70%61%6E%3E%0A%20%20%20%20%20%20%20%20%09%3C%73%70%61%6E%20%63%6C%61%73%73%3D%22%79%61%6E%67%69%74%75%20%61%6B%74%69%66%22%20%69%64%3D%22%79%61%6E%67%69%74%75%5F%31%22%3E%4D%79%20%50%72%6F%66%69%6C%65%3C%2F%73%70%61%6E%3E%0A%20%20%20%20%20%20%20%20%09%3C%73%70%61%6E%20%68%72%65%66%3D%22%23%22%20%63%6C%61%73%73%3D%22%6B%6C%69%6B%22%20%63%6C%61%73%73%3D%22%79%61%6E%67%69%74%75%22%20%69%64%3D%22%79%61%6E%67%69%74%75%5F%33%22%3E%3C%2F%73%70%61%6E%3E%0A%09%09%09%3C%64%69%76%20%63%6C%61%73%73%3D%22%6B%65%6D%61%6E%61%61%6A%61%2D%62%61%77%61%68%22%3E%0A%20%20%20%20%20%20%20%20%09%3C%64%69%76%20%63%6C%61%73%73%3D%22%6B%65%6D%61%6E%61%61%6A%61%22%3E%0A%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%0A%20%20%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%68%61%6C%75%22%20%69%64%3D%22%68%61%68%5F%31%22%20%73%74%79%6C%65%3D%22%74%65%78%74%2D%61%6C%69%67%6E%3A%20%63%65%6E%74%65%72%3B%22%3E%0A%20%20%20%20%20%20%20%20%09%3C%68%32%20%63%6C%61%73%73%3D%22%75%70%22%3E%48%65%6C%6C%6F%2C%20%4E%69%63%65%20%74%6F%20%6D%65%65%74%20%79%6F%75%21%3C%2F%68%32%3E%09%0A%20%20%20%20%20%20%20%20%09%3C%62%72%3E%0A%20%20%20%20%20%20%20%20%09%3C%69%6D%67%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%69%2E%70%6F%73%74%69%6D%67%2E%63%63%2F%4B%59%4D%35%4D%68%71%4B%2F%66%6F%74%6F%2E%6A%70%67%22%20%73%74%79%6C%65%3D%22%77%69%64%74%68%3A%20%34%30%25%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%73%65%63%74%69%6F%6E%20%73%74%79%6C%65%3D%22%66%6F%6E%74%2D%73%69%7A%65%3A%20%32%35%70%78%3B%22%3E%0A%20%20%20%20%20%20%20%20%09%3C%70%3E%52%65%7A%6B%79%20%43%61%74%75%72%20%42%75%6E%67%61%20%4E%61%79%61%3C%2F%70%3E%3C%70%3E%4E%49%4D%3A%20%34%33%32%31%30%30%33%35%3C%2F%70%3E%3C%70%3E%50%72%6F%64%69%3A%20%53%69%73%74%65%6D%20%49%6E%66%6F%72%6D%61%73%69%3C%2F%70%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%75%6C%20%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%09%3C%70%20%73%74%79%6C%65%3D%22%74%65%78%74%2D%61%6C%69%67%6E%3A%20%6C%65%66%74%3B%22%3E%53%69%6C%61%68%6B%61%6E%20%48%75%62%75%6E%67%69%3A%3C%2F%70%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%70%20%73%74%79%6C%65%3D%22%74%65%78%74%2D%61%6C%69%67%6E%3A%20%6C%65%66%74%3B%22%3E%49%6E%73%74%61%67%72%61%6D%3A%20%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%69%6E%73%74%61%67%72%61%6D%2E%63%6F%6D%2F%6B%69%64%64%6F%6C%5F%22%3E%40%4B%69%64%64%6F%6C%5F%3C%2F%61%3E%2E%3C%2F%70%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%70%20%73%74%79%6C%65%3D%22%74%65%78%74%2D%61%6C%69%67%6E%3A%20%6C%65%66%74%3B%22%3E%45%6D%61%69%6C%3A%20%3C%61%20%68%72%65%66%3D%22%6D%61%69%6C%74%6F%3A%72%63%62%6E%61%79%61%33%31%40%67%6D%61%69%6C%2E%63%6F%6D%22%3E%72%63%62%6E%61%79%61%33%31%40%67%6D%61%69%6C%2E%63%6F%6D%3C%2F%61%3E%2E%3C%2F%70%3E%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%2F%75%6C%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%2F%73%65%63%74%69%6F%6E%3E%20%0A%20%20%20%20%20%20%20%20%09%3C%2F%75%6C%3E%0A%20%20%20%20%20%20%20%20%09%3C%73%70%61%6E%20%63%6C%61%73%73%3D%22%73%69%70%22%3E%3C%2F%73%70%61%6E%3E%0A%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%0A%20%20%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%6B%6F%6E%74%61%6B%22%20%69%64%3D%22%68%61%68%5F%22%20%73%74%79%6C%65%3D%22%64%69%73%70%6C%61%79%3A%20%6E%6F%6E%65%3B%22%3E%0A%0A%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%68%61%68%22%20%69%64%3D%22%68%61%68%5F%32%22%20%73%74%79%6C%65%3D%22%64%69%73%70%6C%61%79%3A%20%6E%6F%6E%65%3B%22%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%68%32%20%63%6C%61%73%73%3D%22%75%70%22%20%61%6C%69%67%6E%3D%22%63%65%6E%74%65%72%22%3E%54%75%67%61%73%3C%2F%68%32%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%70%20%73%74%79%6C%65%3D%22%66%6F%6E%74%2D%73%69%7A%65%3A%20%32%30%70%78%3B%22%3E%43%68%61%6C%61%6E%67%65%20%53%75%64%61%68%20%44%69%6B%65%72%6A%61%6B%61%6E%3A%3C%2F%70%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%75%6C%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%6F%6E%63%6C%69%63%6B%3D%22%61%6C%65%72%74%28%27%53%65%6C%61%6E%6A%75%74%6E%79%61%27%29%22%20%68%72%65%66%3D%22%2E%2E%2F%70%30%33%2F%74%61%62%65%6C%2E%68%74%6D%6C%22%3E%50%30%33%20%48%54%4D%4C%20%54%61%62%6C%65%20%53%65%64%65%72%68%61%6E%61%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%6F%6E%63%6C%69%63%6B%3D%22%61%6C%65%72%74%28%27%53%65%6C%61%6E%6A%75%74%6E%79%61%27%29%22%20%68%72%65%66%3D%22%2E%2E%2F%70%30%33%63%73%73%2F%74%61%62%65%6C%2D%32%2E%68%74%6D%6C%22%3E%50%30%33%20%48%54%4D%4C%20%54%61%62%6C%65%20%43%53%53%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%6F%6E%63%6C%69%63%6B%3D%22%61%6C%65%72%74%28%27%53%65%6C%61%6E%6A%75%74%6E%79%61%27%29%22%20%68%72%65%66%3D%22%2E%2E%2F%70%30%33%6A%71%75%65%72%79%2F%74%61%62%65%6C%2D%33%2E%68%74%6D%6C%22%3E%50%30%33%20%48%54%4D%4C%20%54%61%62%6C%65%20%4A%51%75%65%72%79%20%43%68%61%6C%6C%65%6E%67%65%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%6F%6E%63%6C%69%63%6B%3D%22%61%6C%65%72%74%28%27%53%65%6C%61%6E%6A%75%74%6E%79%61%27%29%22%20%68%72%65%66%3D%22%2E%2E%2F%70%77%33%66%6F%72%6D%75%6C%69%72%2F%69%6E%64%65%78%2E%68%74%6D%6C%22%3E%50%30%33%20%46%6F%72%6D%75%6C%69%72%20%4C%65%76%65%6C%20%23%31%20%42%61%73%69%63%20%48%54%4D%4C%20%46%6F%72%6D%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%6F%6E%63%6C%69%63%6B%3D%22%61%6C%65%72%74%28%27%53%65%6C%61%6E%6A%75%74%6E%79%61%27%29%22%20%68%72%65%66%3D%22%2E%2E%2F%70%30%34%63%73%73%2D%62%61%73%69%63%2F%69%6E%64%65%78%66%72%6F%6D%2E%68%74%6D%6C%22%3E%50%30%34%20%46%6F%72%6D%75%6C%69%72%20%4C%65%76%65%6C%20%23%32%20%42%61%73%69%63%2D%43%53%53%20%48%54%4D%4C%20%46%6F%72%6D%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%6F%6E%63%6C%69%63%6B%3D%22%61%6C%65%72%74%28%27%53%65%6C%61%6E%6A%75%74%6E%79%61%27%29%22%20%68%72%65%66%3D%22%2E%2E%2F%70%30%35%2D%6A%71%75%65%72%79%2D%64%65%6C%65%74%65%2F%69%6E%64%65%78%2E%68%74%6D%6C%22%3E%50%30%35%20%4A%51%75%65%72%79%20%46%61%64%65%4F%75%74%20%57%68%65%6E%20%44%65%6C%65%74%65%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%6F%6E%63%6C%69%63%6B%3D%22%61%6C%65%72%74%28%27%53%65%6C%61%6E%6A%75%74%6E%79%61%27%29%22%20%68%72%65%66%3D%22%2E%2E%2F%70%30%35%2D%6A%71%75%65%72%79%2D%73%6C%69%64%69%6E%67%2F%69%6E%64%65%78%2E%68%74%6D%6C%22%3E%50%30%35%20%4A%51%75%65%72%79%20%53%6C%69%64%69%6E%67%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%6C%69%3E%3C%61%20%6F%6E%63%6C%69%63%6B%3D%22%61%6C%65%72%74%28%27%53%65%6C%61%6E%6A%75%74%6E%79%61%27%29%22%20%68%72%65%66%3D%22%2E%2E%2F%70%30%36%2D%73%70%61%2D%6D%65%6E%75%2F%69%6E%64%65%78%2E%68%74%6D%6C%22%3E%50%30%36%20%4A%51%75%65%72%79%20%41%64%64%2F%52%65%6D%6F%76%65%20%43%6C%61%73%73%20%66%6F%72%20%53%50%41%20%4D%65%6E%75%3C%2F%61%3E%3C%2F%6C%69%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%62%72%3E%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%3C%62%72%3E%0A%0A%20%20%20%20%20%20%20%20%20%20%20%20%3C%2F%75%6C%3E%0A%20%20%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%20%20%20%20%20%0A%20%20%20%20%20%20%20%20%09%0A%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E'));
+//-->
+</script>
